# ai-native-multi-agent-workflow-with-agno

./: README.md  pyproject.toml
app/: __init__.py  agent_os_app.py  main.py
app/agents/: __init__.py  action_agent.py  classification_agent.py  intake_agent.py  review_agent.py
app/models/: __init__.py  metrics.py  outputs.py  records.py  state.py
app/tests/: test_evaluation.py  test_review_agent.py  test_validators.py  test_workflow_smoke.py
app/tools/: __init__.py  evaluation.py  formatting.py  logging.py  retry.py  scoring.py  validators.py
app/workflows/: revops_agentos_workflow.py  revops_workflow.py
data/: sample_pipeline.csv
demo/: evaluation_report.md  operator_summary.md  prioritized_actions.json  run_demo.py
logs/: run_038df7da.json  run_0508a8ec.json  run_0b76f2e1.json  run_12798cce.json  run_14c2130d.json  run_251c3282.json  run_25d7a522.json  run_2cf82c8b.json  run_326eddcc.json  run_32df4fee.json  run_39d1a222.json  run_3afb7834.json  run_3cd916c2.json  run_3e33aee5.json  run_4850b68d.json  run_49b14678.json  run_4c0fdb87.json  run_5008e57d.json  run_54455587.json  run_5681c3fb.json  run_5c4dec30.json  run_5ff34700.json  run_601b5974.json  run_65809122.json  run_692a0f76.json  run_6a7f3b2d.json  run_866504d0.json  run_8ecf41e6.json  run_8f293b34.json  run_8f7240c0.json  run_92eccef7.json  run_9b99c80b.json  run_9f66e7c2.json  run_a0350a8d.json  run_a34296a5.json  run_a7369344.json  run_a97fb9f5.json  run_ab9c6cee.json  run_b11c743e.json  run_be5af21f.json  (+10 more)
